<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/back_dailog_white_square"
    android:minWidth="@dimen/_250sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <View
        android:id="@+id/viewBlue"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/llActionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/str_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnPositive"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/str_ok"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>