<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/str_contact_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:gravity="end"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_margin="@dimen/_2sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/str_contact_nick_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNickName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_margin="@dimen/_3sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/str_contact_email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_margin="@dimen/_3sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/str_contact_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_margin="@dimen/_3sdp"
                android:inputType="number|phone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/str_blood_group"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtBloodGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_margin="@dimen/_3sdp"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/tvSaveUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/str_save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:paddingHorizontal="@dimen/_60sdp"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>