<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_contact_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:gravity="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_contact_nick_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvNickName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"

                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_contact_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_contact_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"
                android:includeFontPadding="false"
                android:inputType="number|phone"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_blood_group"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvBloodGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edittext_gray"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:gravity="end"

                android:includeFontPadding="false"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:src="@drawable/iv_svg_edit" />

            <ImageView
                android:id="@+id/ivCancel"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:src="@drawable/select_unselect_cross" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>